tests/format/misc/_errors_/front-matter/__snapshots__/format.test.js.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: Should not support front matter format[__babel_estree] 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[__js_expression] 1`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter format[__ng_action] 1`] = `
"Parser Error: Unexpected token 'Matter' (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Parser Error: Unexpected token 'Matter'
Cause: Parser Error: Unexpected token 'Matter' at column 11 in [---
Front Matter content
---] in test.html@0:0"
`;

exports[`snippet: Should not support front matter format[__ng_binding] 1`] = `
"Parser Error: Unexpected token 'Matter' (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Parser Error: Unexpected token 'Matter'
Cause: Parser Error: Unexpected token 'Matter' at column 11 in [---
Front Matter content
---] in test.html@0:0"
`;

exports[`snippet: Should not support front matter format[__ng_directive] 1`] = `
"Parser Error: Unexpected end of expression: ---
Front Matter content
--- at the end of the expression [---
Front Matter content
---] (1:0)
> 1 | ---
  2 | Front Matter content
  3 | ---
Cause: Parser Error: Unexpected end of expression: ---
Front Matter content
--- at the end of the expression [---
Front Matter content
---]
Cause: Parser Error: Unexpected end of expression: ---
Front Matter content
--- at the end of the expression [---
Front Matter content
---] in test.html@0:0"
`;

exports[`snippet: Should not support front matter format[__ng_interpolation] 1`] = `
"Parser Error: Unexpected token 'Matter' (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Parser Error: Unexpected token 'Matter'
Cause: Parser Error: Unexpected token 'Matter' at column 11 in [---
Front Matter content
---] in test.html@0:0"
`;

exports[`snippet: Should not support front matter format[__ts_expression] 1`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter format[__vue_event_binding] 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[__vue_expression] 1`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter format[__vue_ts_event_binding] 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[__vue_ts_expression] 1`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter format[acorn] 1`] = `
"Assigning to rvalue (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Assigning to rvalue (1:2)"
`;

exports[`snippet: Should not support front matter format[babel] 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[babel-flow] 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[babel-ts] 1`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[espree] 1`] = `
"Assigning to rvalue (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Assigning to rvalue"
`;

exports[`snippet: Should not support front matter format[flow] 1`] = `
"Invalid left-hand side in assignment (1:3)
> 1 | ---
    |   ^
> 2 | Front Matter content
    | ^^^^^^
  3 | ---"
`;

exports[`snippet: Should not support front matter format[graphql] 1`] = `
"Syntax Error: Invalid number, expected digit but got: "-". (1:2)
> 1 | ---
    |  ^
  2 | Front Matter content
  3 | ---
Cause: Syntax Error: Invalid number, expected digit but got: "-"."
`;

exports[`snippet: Should not support front matter format[json] 1`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter format[json-stringify] 1`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter format[json5] 1`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter format[jsonc] 1`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter format[meriyah] 1`] = `
"Invalid increment/decrement operand (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^^^^^^
  3 | ---
Cause: [2:6-2:12]: Invalid increment/decrement operand"
`;

exports[`snippet: Should not support front matter format[typescript] 1`] = `
"Expression expected. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Expression expected."
`;
